# ros2_sandbox

bazel-build/: .gitignore  Makefile  WORKSPACE  plan.md
bazel-build/.agents/rules/: agent_behavior.md  commit_rules.md
bazel-build/.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.jazzy
bazel-build/doc/: bazel_opt_jazzy.md  current_task.md  evaluation_apexai.md  evaluation_mvukov.md
bazel-build/phase3/apexai_rules_ros/: .gitignore  BUILD  Makefile  WORKSPACE  defs.bzl
bazel-build/phase3/apexai_rules_ros/src/humble_opt/diag_sample/: CMakeLists.txt
bazel-build/phase3/apexai_rules_ros/src/humble_opt/diag_sample/src/: diag_sample_node.cpp
bazel-build/phase3/apexai_rules_ros/src/humble_opt/pcl_sample/: BUILD  package.xml
bazel-build/phase3/apexai_rules_ros/src/humble_opt/pcl_sample/src/: pcl_sample_node.cpp
bazel-build/phase3/apexai_rules_ros/src/jazzy_opt/diag_sample/: CMakeLists.txt
bazel-build/phase3/mvukov_rules_ros2/: MODULE.bazel  WORKSPACE
bazel-build/phase3/mvukov_rules_ros2/repositories/: pcl_conversions.BUILD.bazel  pcl_msgs.BUILD.bazel
bazel-build/phase3/mvukov_rules_ros2/src/humble_opt/diag_sample/: BUILD
bazel-build/phase3/mvukov_rules_ros2/src/humble_opt/pcl_sample/: BUILD  CMakeLists.txt
bazel-build/phase3/mvukov_rules_ros2/src/jazzy_opt/diag_sample/: BUILD  package.xml
bazel-build/phase3/mvukov_rules_ros2/src/jazzy_opt/pcl_sample/: package.xml
bazel-build/phase3/mvukov_rules_ros2/src/jazzy_opt/pcl_sample/src/: pcl_sample_node.cpp
bazel-build/phase3/mvukov_rules_ros2/test/docker/: Dockerfile  compose.yaml  run_test.sh
bazel-build/src/humble_opt/diag_sample/: package.xml
bazel-build/src/jazzy_opt/diag_sample/src/: diag_sample_node.cpp
bazel-build/src/jazzy_opt/pcl_sample/: CMakeLists.txt
bazel-build/test/docker/: Dockerfile  compose.yaml  run_test.sh
compo_multi/: package.xml
compo_multi/src/: subscriber.cpp  subscriber_member_function.cpp
component_multithread/: makefile
component_multithread/src/compo_multi/launch/: launch.py
component_multithread/src/compo_multi/src/: subscriber.cpp
hello-rviz-gazebo/.devcontainer/: Dockerfile  devcontainer.json
hello-rviz-gazebo/doc/: phase1_env.md  phase2_rviz.md  phase3_gazebo.md  phase4_bridge.md  phase5_project.md  plan.md
lifecycle/src/my_lifecycle_node/: CMakeLists.txt  package.xml
lifecycle/src/my_lifecycle_node/launch/: lifecycle_node_launch.py
lifecycle/src/my_lifecycle_node/src/: lifecycle_node.cpp
long_timer_handler/: makefile
long_timer_handler/src/cpp_pubsub/: CMakeLists.txt  package.xml
long_timer_handler/src/cpp_pubsub/src/: publisher_member_function.cpp
observe_env/: makefile
observe_env/src/observe_env/: CMakeLists.txt  package.xml
observe_env/src/observe_env/src/: publisher_member_function.cpp
ros_param_by_code/: makefile
ros_param_by_code/src/cpp_parameters/: CMakeLists.txt  package.xml
ros_param_by_code/src/cpp_parameters/src/: class_main.cpp  cpp_parameters_node.cpp
src/compo_multi/: CMakeLists.txt
sync_by_condvar/: makefile
sync_by_condvar/src/sync_condvar/: CMakeLists.txt  package.xml
sync_by_condvar/src/sync_condvar/src/: sync_by_condvar.cpp
unittest_simple/: .gitignore  makefile
unittest_simple/src/simple_unittest/: CMakeLists.txt  package.xml
unittest_simple/src/simple_unittest/include/simple_unittest/: simple_node.hpp
unittest_simple/src/simple_unittest/src/: simple_node.cpp
unittest_simple/src/simple_unittest/test/: test_simple_node.cpp
