<?xml version="1.0"?>
<package format="3">
  <name>my_lifecycle_node</name>
  <version>0.1.0</version>
  <description>Lifecycle Node example in ROS2</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
